--- a/website/public/resources/css/main.css
+++ b/website/public/resources/css/main.css
@@ -764,6 +764,10 @@ select {
     margin-bottom: 0;
 }
 
+.dd-p{
+    margin: -25px 0 0 35px;
+}
+
 @-moz-keyframes spin {
     100% {
         -moz-transform: rotate(360deg);
