--- a/website/backend/reports/reportePerfilesUsuario.jrxml
+++ b/website/backend/reports/reportePerfilesUsuario.jrxml
@@ -75,52 +75,69 @@ ORDER BY
 	<title>
 		<band height="91" splitType="Stretch">
 			<staticText>
-				<reportElement x="380" y="8" width="170" height="46" uuid="c7f2332e-1e71-4129-b28a-437c1fdd9ebf"/>
+				<reportElement x="360" y="8" width="190" height="46" uuid="c7f2332e-1e71-4129-b28a-437c1fdd9ebf"/>
 				<textElement>
-					<font fontName="SansSerif" size="18"/>
+					<font fontName="DejaVu Sans" size="18"/>
 				</textElement>
 				<text><![CDATA[Reporte de perfiles por usuario]]></text>
 			</staticText>
-			<image>
-				<reportElement x="20" y="29" width="189" height="32" uuid="ec84310e-84e9-4917-98ca-3c15cf9e9339"/>
-				<imageExpression><![CDATA["http://192.168.1.105/mnt/nas/Dev/EmergenciaID/website/public/resources/images/for-light-bg.svg"]]></imageExpression>
-			</image>
 			<textField pattern="MMMM d, yyyy h:mm:ss a">
-				<reportElement x="380" y="54" width="170" height="16" uuid="4909cabd-03b0-4756-b3ec-6876d4755df4"/>
+				<reportElement x="360" y="54" width="190" height="16" uuid="4909cabd-03b0-4756-b3ec-6876d4755df4"/>
+				<textElement>
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="380" y="70" width="78" height="14" uuid="af2a10d6-323f-48a7-ba8f-c240ec2e8da1"/>
+				<reportElement x="360" y="70" width="85" height="14" uuid="af2a10d6-323f-48a7-ba8f-c240ec2e8da1">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
 				<textElement>
-					<font fontName="TTCommons-Bold" size="10"/>
+					<font fontName="DejaVu Sans" size="10"/>
 				</textElement>
 				<text><![CDATA[Usuario creador: ]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="458" y="70" width="114" height="14" uuid="72e4486d-980b-4ba0-b84c-450bbcb01f33"/>
+				<reportElement x="445" y="70" width="118" height="14" uuid="72e4486d-980b-4ba0-b84c-450bbcb01f33"/>
+				<textElement>
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{email}]]></textFieldExpression>
 			</textField>
 			<rectangle>
-				<reportElement x="371" y="8" width="5" height="76" forecolor="rgba(0, 0, 0, 0.0)" backcolor="#2F8DEB" uuid="56117c60-f15d-4ac7-9545-bcb31897e0d1">
+				<reportElement x="351" y="8" width="5" height="76" forecolor="rgba(0, 0, 0, 0.0)" backcolor="#2F8DEB" uuid="56117c60-f15d-4ac7-9545-bcb31897e0d1">
 					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
+				<graphicElement>
+					<pen lineWidth="0.0"/>
+				</graphicElement>
 			</rectangle>
+			<image hAlign="Left" vAlign="Middle">
+				<reportElement x="20" y="19" width="260" height="51" uuid="fc0fbb77-5a2e-41e7-9748-9cdb3a021aa9">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<imageExpression><![CDATA["https://drive.google.com/uc?export=view&id=16Ck7Iixprqcu5BLetkjznt50OiGd9723"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="19">
 			<rectangle>
 				<reportElement x="0" y="0" width="572" height="19" forecolor="rgba(0, 0, 0, 0.0)" backcolor="#2F8DEB" uuid="7fe79586-deed-4658-8f03-afa1d63cefd5"/>
+				<graphicElement>
+					<pen lineWidth="0.0"/>
+				</graphicElement>
 			</rectangle>
 			<staticText>
 				<reportElement x="177" y="0" width="115" height="19" forecolor="#FFFFFF" uuid="e80aebcf-8305-4399-adec-3cafc52e9897">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font size="13"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
 				<text><![CDATA[Correo electrónico:]]></text>
 			</staticText>
@@ -130,7 +147,7 @@ ORDER BY
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
-					<font size="13"/>
+					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{email}]]></textFieldExpression>
 			</textField>
@@ -139,19 +156,19 @@ ORDER BY
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font size="13"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
 				<text><![CDATA[Teléfono:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="502" y="0" width="58" height="19" forecolor="#FFFFFF" uuid="ac3c52c6-724e-4b11-86a9-1be7178b302c">
+				<reportElement x="501" y="0" width="58" height="19" forecolor="#FFFFFF" uuid="ac3c52c6-724e-4b11-86a9-1be7178b302c">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font size="13"/>
+					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{telefono}]]></textFieldExpression>
 			</textField>
@@ -161,7 +178,7 @@ ORDER BY
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
-					<font size="13"/>
+					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{idUsuario}]]></textFieldExpression>
 			</textField>
@@ -170,99 +187,137 @@ ORDER BY
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font size="13"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
 				<text><![CDATA[ID de identificación:]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="109" splitType="Stretch">
+		<band height="119" splitType="Stretch">
 			<textField>
-				<reportElement x="83" y="7" width="60" height="14" uuid="37983e8b-ec0a-405b-9031-49deb262fc3b"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement x="89" y="7" width="60" height="14" uuid="37983e8b-ec0a-405b-9031-49deb262fc3b"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{uid}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="83" y="37" width="124" height="14" uuid="ba6b0eee-f24d-4031-b1ca-36860c97d85a"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement x="89" y="37" width="124" height="14" uuid="ba6b0eee-f24d-4031-b1ca-36860c97d85a"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{nombres}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="83" y="67" width="124" height="14" uuid="b8948f62-cd93-4e2b-be46-0e71555e70ba"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement x="89" y="67" width="124" height="14" uuid="b8948f62-cd93-4e2b-be46-0e71555e70ba"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{edad}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="462" y="7" width="74" height="14" uuid="b77d068b-baff-43d5-b8a5-436bb2cca23e"/>
-				<textElement verticalAlignment="Middle"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{pais}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="462" y="37" width="74" height="14" uuid="b0da1b5c-3ef4-41ad-8220-fc9723d23173"/>
-				<textElement verticalAlignment="Middle"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{estado}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="462" y="67" width="74" height="14" uuid="b6bd3583-419b-4be0-94cb-f5c2c66aa5d1"/>
-				<textElement verticalAlignment="Middle"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{ciudad}]]></textFieldExpression>
 			</textField>
 			<textField pattern="MMMM d, yyyy h:mm:ss a">
-				<reportElement x="390" y="87" width="146" height="14" uuid="d9cd668d-def4-4f84-9cf5-597e6d7538ce"/>
+				<reportElement x="378" y="96" width="158" height="14" uuid="d9cd668d-def4-4f84-9cf5-597e6d7538ce"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font isItalic="false"/>
+					<font fontName="DejaVu Sans" isItalic="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[DATEFORMAT($F{fecha_creacion}, "MMMM d, yyyy h:mm:ss a")]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="35" y="7" width="48" height="14" uuid="20315c34-df24-4544-bdb9-176e8416a9a0"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement x="35" y="7" width="54" height="14" uuid="20315c34-df24-4544-bdb9-176e8416a9a0"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<text><![CDATA[UID:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="35" y="37" width="48" height="14" uuid="03750d29-f54f-4a34-be96-b7f797511127"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement x="35" y="37" width="54" height="14" uuid="03750d29-f54f-4a34-be96-b7f797511127"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<text><![CDATA[Nombres:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="35" y="67" width="48" height="14" uuid="4a6e9727-1d5b-425f-8e06-acae8a112606"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement x="35" y="67" width="54" height="14" uuid="4a6e9727-1d5b-425f-8e06-acae8a112606"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<text><![CDATA[Edad:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="414" y="67" width="48" height="14" uuid="b4289d0e-0273-42ca-a7b0-6fa7648c78c1"/>
-				<textElement verticalAlignment="Middle"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<text><![CDATA[Ciudad:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="414" y="7" width="48" height="14" uuid="99115991-1589-4391-8f05-f82251ad8065"/>
-				<textElement verticalAlignment="Middle"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<text><![CDATA[País:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="414" y="37" width="48" height="14" uuid="6da69a84-f70c-47a1-85e7-69e432596329"/>
-				<textElement verticalAlignment="Middle"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<text><![CDATA[Estado:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="300" y="87" width="90" height="14" uuid="baa058c7-551c-48ba-ace4-1e2e24310889"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement x="280" y="96" width="98" height="14" uuid="baa058c7-551c-48ba-ace4-1e2e24310889"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<text><![CDATA[Fecha de creación:]]></text>
 			</staticText>
+			<line>
+				<reportElement x="1" y="118" width="571" height="1" forecolor="#A0D6FA" uuid="14f92c6a-b9a3-471c-81ab-762a5648eb2c">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
+			</line>
 		</band>
 	</detail>
 	<pageFooter>
 		<band height="19" splitType="Stretch">
 			<textField>
-				<reportElement positionType="FixRelativeToBottom" x="490" y="0" width="40" height="19" uuid="a1005e7a-5cd7-446d-958f-02e1f25318c6"/>
-				<textElement textAlignment="Right"/>
+				<reportElement positionType="FixRelativeToBottom" x="490" y="0" width="50" height="19" uuid="8d152aa7-0034-47ae-a0b4-92cd505c4bad"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA["Página " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement positionType="FixRelativeToBottom" x="531" y="0" width="40" height="18" uuid="f1d84306-339e-41dc-a69a-b7a0397fd7fa"/>
-				<textElement textAlignment="Left"/>
+				<reportElement positionType="FixRelativeToBottom" x="540" y="0" width="32" height="19" uuid="9ff80971-99b0-40a6-9ac6-1049edeb843f">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[" de " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
